WebCore/platform/ScrollView.h
@@ -92,6 +92,11 @@ public:
     virtual void setCanHaveScrollbars(bool);
     bool canHaveScrollbars() const { return horizontalScrollbarMode() != ScrollbarAlwaysOff || verticalScrollbarMode() != ScrollbarAlwaysOff; }
 
+    // By default you only receive paint events for the area that is visible. In the case of using a
+    // tiled backing store, this method can be set, so that the view paints the entire contents.
+    bool paintsEntireContents() const { return m_paintsEntireContents; }
+    void setPaintsEntireContents(bool);
+
     // Overridden by FrameView to create custom CSS scrollbars if applicable.
     virtual PassRefPtr<Scrollbar> createScrollbar(ScrollbarOrientation);
 
@@ -271,6 +276,8 @@ private:
     IntPoint m_panScrollIconPoint;
     bool m_drawPanScrollIcon;
     bool m_useFixedLayout;
+
+    bool m_paintsEntireContents;
 
     void init();
     void destroy();
